deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: kube-resource-report
  name: kube-resource-report
  namespace: kube-resource-report-system
spec:
  rules:
    - host: kube-resource-report-demo.dev2.fabrique.social.gouv.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: kube-resource-report
              servicePort: 80
  tls:
    - secretName: kube-resource-report-crt
      hosts:
        - kube-resource-report-demo.dev2.fabrique.social.gouv.fr
